Mon Jan  3 11:14:27 PST 2000	Michael Jennings <mej@eterm.org>

	First commit of the new year!  (Notice I didn't say the new millenium,
	since *that* doesn't start until Jan 1, 2001.)

	This should hopefully fix the bug where dead keys would bring up the
	menu.
	
-------------------------------------------------------------------------------
Mon Jan  3 12:47:59 PST 2000	Michael Jennings <mej@eterm.org>

	Fixed the bug with a solid scrollbar not updating colors when the
	focus changed.  Pointed out by cirin <stevenr@houston.rr.com>.
	
-------------------------------------------------------------------------------
Mon Jan  3 19:36:16 PST 2000	Michael Jennings <mej@eterm.org>

	Fixed a seg fault on large resizes.  Also redid some of the memory
	tracking code to provide more information.
	
-------------------------------------------------------------------------------
Tue Jan  4 14:13:48 PST 2000	Michael Jennings <mej@eterm.org>

	Some minor optimizations I did while looking into a bug report.
	
-------------------------------------------------------------------------------
Wed Jan  5 21:23:56 PST 2000	Michael Jennings <mej@eterm.org>

	Copyright date updates.
	
-------------------------------------------------------------------------------
Fri Jan  7 20:11:48 PST 2000	Michael Jennings <mej@eterm.org>

	A patch from Sung-Hyun Nam <namsh@lgic.co.kr> to improve multi-byte
	font configuration in the default theme files.
	
-------------------------------------------------------------------------------
Mon Jan 10 14:47:33 PST 2000	Michael Jennings <mej@eterm.org>

	Fixed the problem with menus in auto mode.
	
-------------------------------------------------------------------------------
Mon Jan 10 16:55:51 PST 2000	Michael Jennings <mej@eterm.org>

	Fixed some transparency issues noticed by keebler
	<keebler@sandwich.net>.
	
-------------------------------------------------------------------------------