@@ -325,6 +325,7 @@
 #undef IOTRACE
 #undef HAVE_UTEMPTER
 #undef PTY_GRP_NAME
+#undef ENABLE_PROFILE
 
 
 /* Leave that blank line there!!  Autoheader needs it.
