@@ -261,6 +261,16 @@ AC_ARG_WITH(pablo,
               AC_MSG_RESULT(no)
             fi, AC_MSG_RESULT(no)
 )
+AC_MSG_CHECKING(if profiling macros should be included)
+AC_ARG_ENABLE(profile,
+[  --enable-profile        compile with code profiling macros enabled],
+            if test "$enableval" = "yes"; then 
+              AC_MSG_RESULT(yes)
+              AC_DEFINE(ENABLE_PROFILE)
+            else
+              AC_MSG_RESULT(no)
+            fi, AC_MSG_RESULT(no)
+)
 AC_MSG_CHECKING(for pixmap support)
 AC_ARG_WITH(imlib,
 [  --with-imlib[=DIR]      compile with Imlib support (Imlib residing in DIR/lib) (default)],
